# Northwind.Web/swagger.json
@@ -150,6 +150,44 @@
         }
       }
     },
+    "/dashboard": {
+      "get": {
+        "tags": [
+          "Dashboard"
+        ],
+        "summary": "Returns an order including its order details",
+        "operationId": "Dashboard_GetOrderInfosByDate",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "name": "dashboardCriteria",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DashboardCriteria"
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "an order",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/OrderInfo"
+              }
+            }
+          }
+        }
+      }
+    },
     "/employees/getallemployees": {
       "get": {
         "tags": [
@@ -509,6 +547,53 @@
         }
       }
     },
+    "OrderInfo": {
+      "type": "object",
+      "required": [
+        "orderDetailId",
+        "quantity"
+      ],
+      "properties": {
+        "orderId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "orderDetailId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "quantity": {
+          "type": "integer"
+        },
+        "orderDate": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "shipCountry": {
+          "type": "string"
+        },
+        "orderDetailAmount": {
+          "type": "number",
+          "format": "decimal"
+        },
+        "categoryName": {
+          "type": "string"
+        }
+      }
+    },
+    "DashboardCriteria": {
+      "type": "object",
+      "properties": {
+        "dateFrom": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "dateTo": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "EmployeeMinimal": {
       "type": "object",
       "required": [
@@ -602,6 +687,9 @@
           "type": "string"
         },
         "shipFax": {
+          "type": "string"
+        },
+        "shipper": {
           "type": "string"
         },
         "customerName": {
